# hammock

./: CLAUDE.md  CPP_ACCELERATION.md  CYTHON_INTEGRATION_RECOMMENDATIONS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  RUST_JACCARD_SIMILARITY.md  benchmark_hll.py  build_cpp_extension.py  build_rust.py  debug_rust_path.py  example_fasthll.py  pytest.ini  setup.py  test_hammock.py  test_rust_hll.py
benchmarks/: README_SEPARATED_TIMING.md  README_profiling.md  bedtools.sh  benchmark_bedtools.py  benchmark_bedtools_separated.py  benchmark_cpp_subB_strategies.py  benchmark_hll.py  benchmark_hll_hashsize.py  benchmark_hll_profiled.py  benchmark_pybedtools.py  benchmark_sketches.py  benchmark_sketches_profiled.py  profiling_example.py  sketch_comparison_timer.py
cmode/: generate_beds.py
cobind_repro/: cobind_wrapup.Rmd
docs/: INTEGRATION_SUMMARY.md
examples/: comparison_example.py  example_rusthll.py  rusthll_example.py
hammock/: README.md  __init__.py  hammock.py  setup.py
hammock_cpp/: Makefile  Makefile.new  README.md  run_example.sh
lib/: bed_jaccmh_parallel_1m.py  bed_similarity.py  bed_sourmash_1m.py  bedprocessing.py  exact.py  hll_lz.py  hyperloglog.py  minhash.py  sketchclass.py
rust_hll/: Cargo.toml  README.md  build.py
rust_hll/src/: lib.rs
scripts/: ENCODE_report_to_key.sh  README.md  atacseq_heatmap.R  balance_species.sh  batch_filter_hammock.sh  bedtools_pairwise.sh  clustering_analysis.R  clustering_analysis.py  compare_clustering_trees.py  compare_sim_matrices.py  complete_parameter_sweep.sh  draw_clustering_tree.py  draw_dendrograms.R  (+12 more)
(+198 files in other folders)
