[package]
name = "rust_hll"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_hll"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
rand = "0.8"
bincode = "1.3"
num_cpus = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
ahash = "0.7"

[build-dependencies]
pyo3-build-config = "0.19" 